--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "web-types": "./web-types.json",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
