--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "@vueuse/core": "^13.5.0",
-    "axios": "^1.10.0",
+    "axios": "1.12.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
-    "element-plus": "^2.10.2",
+    "element-plus": "2.11.3",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
@@ -41,7 +41,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
-    "vite": "^7.0.0",
+    "vite": "7.1.11",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vue-tsc": "^2.2.10"
   }
